@@ -1,5 +1,5 @@
 EXTRA_DIST = fapolicyd.rules  fapolicyd.mounts fapolicyd.service fapolicyd.conf fapolicyd-tmpfiles.conf
 fapolicyddir = $(sysconfdir)/fapolicyd
-dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.mounts fapolicyd.conf
+dist_fapolicyd_DATA = fapolicyd.rules fapolicyd.conf
 systemdservicedir = $(systemdsystemunitdir)
 dist_systemdservice_DATA = fapolicyd.service
