@@ -1,8 +1,0 @@
-# This file must be tailored for your system. You can get a start by
-# running this:
-#
-# mount | egrep '^tmpfs| ext4| ext3| xfs' | awk '{ printf "%s\n", $3 }' | \
-# egrep -v '^\/run$|^\/sys'
-
-/boot
-/
