@@ -9,7 +9,7 @@ fapolicyd_cli_CFLAGS = $(fapolicyd_CFLAGS)
 fapolicyd_cli_LDFLAGS = $(fapolicyd_LDFLAGS)
 
 fapolicyd_SOURCES = database.c daemon-config.c event.c \
-	fapolicyd.c file.c lru.c message.c \
+	fapolicyd.c fd-fgets.c file.c lru.c message.c \
 	mounts.c notify.c object-attr.c object.c \
 	policy.c process.c queue.c rules.c \
 	subject-attr.c subject.c temporary_db.c
@@ -17,7 +17,7 @@ fapolicyd_SOURCES = database.c daemon-config.c event.c \
 fapolicyd_cli_SOURCES = fapolicyd-cli.c
 
 noinst_HEADERS = database.h daemon-config.h event.h \
-	file.h lru.h message.h mounts.h notify.h \
+	fd-fgets.h file.h lru.h message.h mounts.h notify.h \
 	nv.h object-attr.h object.h policy.h \
 	process.h queue.h rules.h subject-attr.h subject.h \
 	temporary_db.h
